# quill-data-provider

./: build_and_install.sh
data-provider-lib/: Cargo.toml
data-provider-lib/src/: lib.rs
eink-window-settings/: Cargo.toml
eink-window-settings/other/: eink-window-settings.desktop
eink-window-settings/other/default/: config.ron
eink-window-settings/src/: main.rs  style.rs  style_original.rs
eink_window_settings/: Cargo.toml
eink_window_settings/default/: config.ron
eink_window_settings/other/: eink_window_settings.desktop
eink_window_settings/src/: main.rs
enums/src/: lib.rs
eww-data-provider/: Cargo.toml
eww-data-provider/src/: backlight.rs  battery.rs  bluetooth.rs  bluetooth_listener.rs  consts.rs  dunst.rs  eink.rs  eink_listener.rs  gamma.rs  listener.rs  main.rs  network.rs  player.rs  requests.rs  settingsmenu.rs  virtualkeyboard.rs  volume.rs
eww-data-requester/: Cargo.toml
eww-data-requester/src/: main.rs
quill-data-provider/: Cargo.toml
quill-data-provider-lib/: Cargo.toml
quill-data-provider-lib/src/: lib.rs
quill-data-provider/src/: backlight.rs  battery.rs  bluetooth.rs  dunst.rs  eink.rs  eink_listener.rs  gestures.rs  main.rs  network.rs  player.rs  settingsmenu.rs  volume.rs
