[package]
name = "quill-data-provider-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
enum2egui = "0.33.0"
eframe = { version ="0.33.3", features = ["default"] }
enum2str = "0.1.18"
ron = "0.12.0"
