[package]
name = "quill-data-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.11.8"
async-trait = "0.1.73"
enums = { path = "../enums" }
postcard = { version = "1.1.3", features = ["postcard-derive", "alloc"] }
anyhow = "1.0.100"
quill-data-provider-lib = { path = "../quill-data-provider-lib" }
